--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".activities.CategoriesActivity"
+            android:name=".ui.activities.CategoriesActivity"
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.MealActivity"
+            android:name=".ui.activities.MealActivity"
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
